update title list

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple to-do lists</title>
+    <title>Kharij's to-do lists</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
-            background-color: #fff4f4;
+            background-color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -82,7 +82,7 @@
     </style>
 </head>
 <body>
-    <h1>Simple to-dos</h1>
+    <h1>Kharij's to-dos</h1>
     <h3>Place for your lists <i class="fas fa-heart"></i></h3>
     <a href="/create-list">
         <button type="button" class="add-list-button"><i class="fas fa-solid fa-plus"></i> list</button>
